src/style.css
/**
 * This file is part of Minos
 *
 * Copyright (C) 2023 ebmaj7 <ebmaj7@proton.me>
 *
 * Minos is a hack. You can use it according to the terms and
 * conditions of the Hacking License (see licenses/HACK.txt)
 */

:root {
	/* colors */
	/* main (orange) */
	--hsl-h-main: 35;
	--hsl-s-main: 80%;
	--hsl-l-main: 70%;
	--color-main-light: hsl(var(--hsl-h-main), var(--hsl-s-main), var(--hsl-l-main));
	--color-main: hsl(var(--hsl-h-main), var(--hsl-s-main), calc(var(--hsl-l-main) * 0.85));
	--color-main-dark: hsl(var(--hsl-h-main), var(--hsl-s-main), calc(var(--hsl-l-main) * 0.7));
	--color-main-darker: hsl(calc(var(--hsl-h-main) - 3), var(--hsl-s-main), calc(var(--hsl-l-main) * 0.68));
	/* warning */
	--hsl-h-warning: 45;
	--hsl-s-warning: 100%;
	--hsl-l-warning: 75%;
	--color-warning-light: hsl(var(--hsl-h-warning), var(--hsl-s-warning), var(--hsl-l-warning));
	--color-warning: hsl(var(--hsl-h-warning), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.85));
	--color-warning-dark: hsl(var(--hsl-h-warning), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.7));
	--color-warning-darker: hsl(calc(var(--hsl-h-warning) - 3), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.68));
	--color-warning-darkest: hsl(calc(var(--hsl-h-warning) - 5), var(--hsl-s-warning), calc(var(--hsl-l-warning) * 0.55));
	/* gray */
	--hsl-h-gray: 0;
	--hsl-s-gray: 0%;
	--hsl-l-gray: 70%;
	--color-gray-lighter: hsl(var(--hsl-h-gray), var(--hsl-s-gray), var(--hsl-l-gray));
	--color-gray-light: hsl(var(--hsl-h-gray), var(--hsl-s-gray), calc(var(--hsl-l-gray) * 0.6));
	--color-gray: hsl(var(--hsl-h-gray), var(--hsl-s-gray), calc(var(--hsl-l-gray) * 0.4));
	--color-gray-dark: hsl(var(--hsl-h-gray), var(--hsl-s-gray), calc(var(--hsl-l-gray) * 0.3));
	--color-gray-darker: hsl(calc(var(--hsl-h-gray) - 3), var(--hsl-s-gray), calc(var(--hsl-l-gray) * 0.2));
	--color-gray-darkest: hsl(calc(var(--hsl-h-gray) - 3), var(--hsl-s-gray), calc(var(--hsl-l-gray) * 0.1));
	/* title */
	--color-title: #4384CD;
	/* distances and sizes */
	--border-radius: 10px;
	--font-size-huge: 60px;
	--font-size-big: 24px;
	--font-size-normal: 16px;
	--font-size-small: 14px;
	--font-size-tiny: 13px;
	--distance-small: 5px;
	--distance-normal: 8px;
	--distance-big: 10px;
	--distance-huge: 15px;
	/* others */
	--font-family: sans-serif;
	/* tooltip */
	--tooltip-width: 100px;
}

body {
	/* reset body margin which is put by default by chromium */
	margin: 0;
	font-family: var(--font-family);
}

#main {
	justify-items: center;
}

#top-bar {
	column-gap: 10px;
	grid-template-columns: 6fr 1fr;
	background-color: var(--color-gray-darker);
	height: 50px;
}

.box {
	border: 1px solid var(--color-gray-darkest);
	text-decoration: none;
}

.box:focus {
	outline: unset; /* disable orange outline when input is selected */
}

#url-box {
	background-color: var(--color-gray-dark);
	border-radius: var(--border-radius);
	color: var(--color-gray-lighter);
	margin-top: var(--distance-normal);
	margin-left: var(--distance-normal);
	margin-bottom: var(--distance-normal);
	padding-left: var(--distance-big);
	font-size: var(--font-size-normal);
}

#url-box:focus {
	border: 1px solid var(--color-gray);
}

#url-box.disabled {
	background-color: var(--color-gray);
}

.button {
	background-color: var(--color-main);
	color: white;
	border-radius: var(--border-radius);
	border-width: 0px;
	font-size: var(--font-size-normal);
	padding: var(--distance-big);
	margin: var(--distance-small);
	position: relative;
}

.button:hover {
	background-color: var(--color-main-dark);
	cursor: pointer;
}

.button:active {
	background-color: var(--color-main-darker);
	cursor: pointer;
}

.enabled {
	background-color: var(--color-gray-darker);
}

.disabled {
	background-color: var(--color-gray);
}

.disabled:hover {
	background-color: var(--color-gray-light);
}

#verify-button {
	padding: var(--distance-huge);
}

#top-button {
	margin: 10px;
	padding: 2px;
	color: white;
	border-radius: var(--border-radius);
	border-width: 0px;
	font-size: var(--font-size-normal);
}

.main-title {
	font-size: var(--font-size-huge);
	text-align: center;
	color: var(--color-title);
}

.center {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

#report-container {
	justify-items: center;
}

#report {
	font-size: var(--font-size-normal);
	color: red;
	width: 80vw;
	height: 60vh;
	resize: none;
}

#report-label {
	text-align: center;
	font-size: var(--font-size-normal);
}

#form-buttons {
	margin-top: 10px;
	grid-template-columns: 1fr 1fr 1fr;
}

#button-prev {
	grid-column: 1;
}

#button-next {
	grid-column: 3;
}

#form-title {
	font-size: var(--font-size-big);
	padding-bottom: 20px;
}

.label {
	font-size: var(--font-size-small);
	font-weight: bold;
	padding-bottom: var(--distance-normal);
}

.form-input {
	padding: var(--distance-normal);
	margin-bottom: var(--distance-big);
	border-radius: var(--border-radius);
	border: 1px solid var(--color-gray-light);
}

.form-input.invalid {
	border: 1px solid red;
}

#form-label-page {
	font-size: var(--font-size-normal);
	font-weight: bold;
}

.grid {
	display: grid;
}

.hidden {
	display: none;
}

.tooltip {
	background-color: var(--color-warning-darkest);
	padding: var(--distance-normal);
	position: absolute;
	color: white;
	border-radius: 5px;
	width: var(--tooltip-width);
	text-align: center;
}

.tooltip::before {
	content: "";
	position: absolute;
	border-top: 10px solid transparent;
	border-left: 10px solid transparent;
	border-right: 10px solid transparent;
	border-bottom: 10px solid var(--color-warning-darkest);
	left: calc(0.45 * var(--tooltip-width));
	top: -20px;
	width: 0;
	height: 0;
}

#form-checkboxes {
	grid-template-columns: 1fr 1fr 1fr 1fr;
	padding-bottom: var(--distance-big);
}

